--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "icanboogie/errors",
     "type": "library",
-    "description": "An error collector",
-    "keywords": ["errors"],
+    "description": "Collects and render errors",
+    "keywords": [ "errors" ],
     "homepage": "http://icanboogie.org/",
     "license": "BSD-3-Clause",
     "authors": [
@@ -18,7 +18,8 @@
 		"source": "https://github.com/ICanBoogie/Errors"
 	},
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.5.0",
+		"icanboogie/common": "^1.3"
     },
     "autoload": {
         "psr-4": {
