--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "classmap": [ "lib/" ]
+        "psr-4": {
+			"ICanBoogie\\": "lib"
+		}
     }
 }
