--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
 	"type": "library",
 	"description": "Collects and render errors",
 	"keywords": [ "errors" ],
-	"homepage": "http://icanboogie.org/",
+	"homepage": "https://icanboogie.org/",
 	"license": "BSD-3-Clause",
 	"authors": [
 		{
 			"name": "Olivier Laviale",
 			"email": "olivier.laviale@gmail.com",
-			"homepage": "http://www.weirdog.com/",
+			"homepage": "https://olvlvl.com/",
 			"role" : "Developer"
 		}
 	],
