--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	},
 	"require": {
 		"php": ">=5.5.0",
-		"icanboogie/common": "^1.3"
+		"icanboogie/common": "^1.3|^2.0"
 	},
 	"autoload": {
 		"psr-4": {
