--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,12 @@
 		"issues": "https://github.com/ICanBoogie/Errors/issues",
 		"source": "https://github.com/ICanBoogie/Errors"
 	},
+	"config": {
+		"sort-packages": true
+	},
 	"require": {
-		"php": ">=5.5.0",
-		"icanboogie/common": "^1.3|^2.0"
+		"php": ">=8.0",
+		"icanboogie/common": "^2.0"
 	},
 	"autoload": {
 		"psr-4": {
