--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,17 @@
 		"php": ">=8.0",
 		"icanboogie/common": "^2.0"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "^9.5"
+	},
 	"autoload": {
 		"psr-4": {
 			"ICanBoogie\\": "lib"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Tests\\ICanBoogie\\": "tests"
 		}
 	}
 }
