--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
-build/ export-ignore
-tests/ export-ignore
-.travis.yml export-ignore
-phpunit.xml.dist export-ignore
+.github export-ignore
+tests export-ignore
+.editorconfig export-ignore
+docker-compose.yml export-ignore
+Dockerfile export-ignore
+phpunit.xml export-ignore
