--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 		"icanboogie/common": "^2.0"
 	},
 	"require-dev": {
+		"phpstan/phpstan": "^0.12.93",
 		"phpunit/phpunit": "^9.5"
 	},
 	"autoload": {
