--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
 	"config": {
 		"sort-packages": true
 	},
+    "minimum-stability": "dev",
+    "prefer-stable": true,
 	"require": {
-		"php": ">=8.0",
-		"icanboogie/common": "^2.0"
+		"php": ">=8.1",
+		"icanboogie/common": "^6.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^0.12.93",
+		"phpstan/phpstan": "^1.5",
 		"phpunit/phpunit": "^9.5"
 	},
 	"autoload": {
