--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,46 @@
 {
-	"name": "icanboogie/errors",
-	"type": "library",
-	"description": "Collects and render errors",
-	"keywords": [ "errors" ],
-	"homepage": "https://icanboogie.org/",
-	"license": "BSD-3-Clause",
-	"authors": [
-		{
-			"name": "Olivier Laviale",
-			"email": "olivier.laviale@gmail.com",
-			"homepage": "https://olvlvl.com/",
-			"role" : "Developer"
-		}
-	],
-	"support": {
-		"issues": "https://github.com/ICanBoogie/Errors/issues",
-		"source": "https://github.com/ICanBoogie/Errors"
-	},
-	"config": {
-		"sort-packages": true
-	},
+    "name": "icanboogie/errors",
+    "type": "library",
+    "description": "Collects and render errors",
+    "keywords": [
+        "errors"
+    ],
+    "homepage": "https://icanboogie.org/",
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "Olivier Laviale",
+            "email": "olivier.laviale@gmail.com",
+            "homepage": "https://olvlvl.com/",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/ICanBoogie/Errors/issues",
+        "source": "https://github.com/ICanBoogie/Errors"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
-	"require": {
-		"php": ">=8.1",
-		"icanboogie/common": "^6.0"
-	},
-	"require-dev": {
-		"phpstan/phpstan": "^1.5",
-		"phpunit/phpunit": "^9.5"
-	},
-	"autoload": {
-		"psr-4": {
-			"ICanBoogie\\": "lib"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"Tests\\ICanBoogie\\": "tests"
-		}
-	}
+    "prefer-dist": true,
+    "require": {
+        "php": ">=8.1",
+        "icanboogie/common": "^6.0"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.9",
+        "phpunit/phpunit": "^10.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "ICanBoogie\\": "lib"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\ICanBoogie\\": "tests"
+        }
+    }
 }
